[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cellularization-dynamics"
version = "0.2.3"
description = "Desktop GUI for cellularization annotation and output generation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "PyQt6",
    "tifffile",
    "scipy",
    "matplotlib",
    "opencv-python",
    "pyyaml",
    "imageio-ffmpeg>=0.4.9",
]

[project.scripts]
cdynamics = "cellularization_dynamics.app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cellularization_dynamics*"]
